--- a/loginteszt/composer.json
+++ b/loginteszt/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "acacha/admin-lte-template-laravel": "2.*",
         "barryvdh/laravel-debugbar": "^2.3",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
